<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Zapasy.DetalleCategoriaActivity"
    android:orientation="vertical">

    <TextView
        style="@style/labelFormStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorie" />

    <TextView
        android:id="@+id/categoryname"
        style="@style/editTextFormStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/categoriename" />

    <TextView
        style="@style/labelFormStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sold" />

    <TextView
        android:id="@+id/soldmoneyinput"
        style="@style/editTextFormStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/soldquantity" />

    <TextView
        android:id="@+id/soldquantityinput"
        style="@style/editTextFormStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/soldmoney" />

    <TextView
        style="@style/labelFormStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lost" />

    <TextView
        android:id="@+id/lostmoneyinput"
        style="@style/editTextFormStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/lostquantity" />

    <TextView
        android:id="@+id/lostquantityinput"
        style="@style/editTextFormStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/lostmoney" />

    <TextView
        style="@style/labelFormStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoriexproduct" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp" />

    <TextView
        style="@style/labelFormStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoriexgroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp" />

</LinearLayout>
