<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        android:textColor="@color/textSemiBlack"
        android:text="@string/list"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="horizontal"
        >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primaryTextColor"
            android:text="@string/confirm"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primaryTextColor"
            android:text="@string/cancel"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            />

    </LinearLayout>

</LinearLayout>